Condensing with dynamic translations
Condensing linked attributes

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -4037,8 +4037,9 @@
                             <div class='sheet-basetrait sheet-staticAthletics'>
                                 <input class='sheet-deltabutton' type='hidden' name='attr_athletics_delta' value='0' />
                                 <button class="sheet-traitbutton sheet-skillflexattbutton" type='roll' name='roll_tAthleticsRoll' title="@{tAthleticsRoll}" value='@{whisperathletics} &{template:roll} {{trait=@{athleticsname}}} @{rolltAthletics} @{linkedathleticsattbutton} @{showtraitmods}'> <span name="attr_athleticsname"></span></button>
-                                <div class='sheet-linkedAtt' style="display: inline-block; margin-left: -4px;">
-                                    <input class="sheet-LAA" type='checkbox' name='attr_linkedathleticsatt' style="display:none;" value="(AGL)" />
+								<div class='sheet-linkedAtt' style="display: inline-block; margin-left: -4px;">
+									<span name="attr_linkedathleticsatt" data-i18n-dynamic></span>
+                                    <!-- <input class="sheet-LAA" type='checkbox' name='attr_linkedathleticsatt' style="display:none;" value="(AGL)" />
                                     <input class="sheet-LASm" type='checkbox' name='attr_linkedathleticsatt' style="display:none;" value="(SMA)" checked />
                                     <input class="sheet-LASp" type='checkbox' name='attr_linkedathleticsatt' style="display:none;" value="(SPI)" /><input class="sheet-LASt" type='checkbox' name='attr_linkedathleticsatt' style="display:none;" value="(STR)" />
                                     <input class="sheet-LAV" type='checkbox' name='attr_linkedathleticsatt' style="display:none;" value="(VIG)" />
@@ -4046,7 +4047,7 @@
                                     <span class="sheet-LASMA" name='attr_linkedathleticsatt' data-i18n="sma-u">(SMA)</span>
                                     <span class="sheet-LASPI" name='attr_linkedathleticsatt' data-i18n="spi-u">(SPI)</span>
                                     <span class="sheet-LASTR" name='attr_linkedathleticsatt' data-i18n="str-u">(STR)</span>
-                                    <span class="sheet-LAVIG" name='attr_linkedathleticsatt' data-i18n="vig-u">(VIG)</span>&nbsp;
+                                    <span class="sheet-LAVIG" name='attr_linkedathleticsatt' data-i18n="vig-u">(VIG)</span>&nbsp; -->
                                 </div>
                                 <span class="sheet-attrankselect"><select name="attr_athletics" title="@{athletics}" class="sheet-traitdie" value="4">
                                     <option value="4">d4</option>
@@ -4965,7 +4966,8 @@
                                 <input class='sheet-deltabutton' type='hidden' name='attr_psionics_delta' value='0' />
                                 <button class="sheet-traitbutton sheet-skillflexattbutton" type='roll' name='roll_tPsionicsRoll' title="@{tPsionicsRoll}" value='@{whisperpsionics} &{template:roll} {{trait=@{psionicsname}}} @{rolltPsionics} @{linkedpsionicsattbutton} @{showtraitmods}'> <span name="attr_psionicsname"></span></button>
                                 <div class='sheet-linkedAtt' style="display: inline-block; margin-left: -4px;">
-                                    <input class="sheet-LAA" type='checkbox' name='attr_linkedpsionicsatt' style="display:none;" value="(AGL)" />
+									<span name="attr_linkedpsionicsatt" data-i18n-dynamic></span>
+									<!-- <input class="sheet-LAA" type='checkbox' name='attr_linkedpsionicsatt' style="display:none;" value="(AGL)" />
                                     <input class="sheet-LASm" type='checkbox' name='attr_linkedpsionicsatt' style="display:none;" value="(SMA)" checked />
                                     <input class="sheet-LASp" type='checkbox' name='attr_linkedpsionicsatt' style="display:none;" value="(SPI)" /><input class="sheet-LASt" type='checkbox' name='attr_linkedpsionicsatt' style="display:none;" value="(STR)" />
                                     <input class="sheet-LAV" type='checkbox' name='attr_linkedpsionicsatt' style="display:none;" value="(VIG)" />
@@ -4973,7 +4975,7 @@
                                     <span class="sheet-LASMA" name='attr_linkedpsionicsatt' data-i18n="sma-u">(SMA)</span>
                                     <span class="sheet-LASPI" name='attr_linkedpsionicsatt' data-i18n="spi-u">(SPI)</span>
                                     <span class="sheet-LASTR" name='attr_linkedpsionicsatt' data-i18n="str-u">(STR)</span>
-                                    <span class="sheet-LAVIG" name='attr_linkedpsionicsatt' data-i18n="vig-u">(VIG)</span>&nbsp;
+                                    <span class="sheet-LAVIG" name='attr_linkedpsionicsatt' data-i18n="vig-u">(VIG)</span>&nbsp; -->
                                 </div>
                                 <span class="sheet-attrankselect"><select name="attr_psionics" title="@{Psionics}" class="sheet-traitdie" value="4">
                                     <option value="4">d4</option>
@@ -5150,8 +5152,9 @@
                             <div class='sheet-basetrait sheet-staticRitual'>
                                 <input class='sheet-deltabutton' type='hidden' name='attr_ritual_delta' value='0' />
                                 <button class="sheet-traitbutton sheet-skillflexattbutton" type='roll' name='roll_tRitualRoll' title="@{tRitualRoll}" value='@{whisperritual} &{template:roll} {{trait=@{ritualname}}} @{rolltRitual} @{linkedritualattscorebutton} @{showtraitmods}'> <span name="attr_ritualname"></span></button>
-                                <div class='sheet-linkedAtt' style="display: inline-block; margin-left: -4px;">
-                                    <input class="sheet-LAA" type='checkbox' name='attr_linkedritualattscore' style="display:none;" value="(AGL)" />
+								<div class='sheet-linkedAtt' style="display: inline-block; margin-left: -4px;">
+									<span name="attr_linkedritualattscore" data-i18n-dynamic></span>
+                                    <!-- <input class="sheet-LAA" type='checkbox' name='attr_linkedritualattscore' style="display:none;" value="(AGL)" />
                                     <input class="sheet-LASm" type='checkbox' name='attr_linkedritualattscore' style="display:none;" value="(SMA)" checked />
                                     <input class="sheet-LASp" type='checkbox' name='attr_linkedritualattscore' style="display:none;" value="(SPI)" />
                                     <input class="sheet-LASt" type='checkbox' name='attr_linkedritualattscore' style="display:none;" value="(STR)" />
@@ -5160,7 +5163,7 @@
                                     <span class="sheet-LASMA" name='attr_linkedritualattscore' data-i18n="sma-u">(SMA)</span>
                                     <span class="sheet-LASPI" name='attr_linkedritualattscore' data-i18n="spi-u">(SPI)</span>
                                     <span class="sheet-LASTR" name='attr_linkedritualattscore' data-i18n="str-u">(STR)</span>
-                                    <span class="sheet-LAVIG" name='attr_linkedritualattscore' data-i18n="vig-u">(VIG)</span>&nbsp;
+                                    <span class="sheet-LAVIG" name='attr_linkedritualattscore' data-i18n="vig-u">(VIG)</span>&nbsp; -->
                                 </div>
                                 <span class="sheet-attrankselect"><select name="attr_ritual" title="@{Ritual}" class="sheet-traitdie" value="4">
                                     <option value="4">d4</option>
@@ -5297,8 +5300,9 @@
                             <div class='sheet-basetrait sheet-staticSpellcasting'>
                                 <input class='sheet-deltabutton' type='hidden' name='attr_spellcasting_delta' value='0' />
                                 <button class="sheet-traitbutton sheet-skillflexattbutton" type='roll' name='roll_tSpellcastingRoll' title="@{tSpellcastingRoll}" value='@{whisperspellcasting} &{template:roll} {{trait=@{spellcastingname}}} @{rolltSpellcasting} @{linkedspellcastingattscorebutton} @{showtraitmods}'> <span name="attr_spellcastingname"></span></button>
-                                <div class='sheet-linkedAtt' style="display: inline-block; margin-left: -4px;">
-                                    <input class="sheet-LAA" type='checkbox' name='attr_linkedspellcastingattscore' style="display:none;" value="(AGL)" />
+								<div class='sheet-linkedAtt' style="display: inline-block; margin-left: -4px;">
+									<span name="attr_linkedspellcastingatt" data-i18n-dynamic></span>
+                                    <!-- <input class="sheet-LAA" type='checkbox' name='attr_linkedspellcastingattscore' style="display:none;" value="(AGL)" />
                                     <input class="sheet-LASm" type='checkbox' name='attr_linkedspellcastingattscore' style="display:none;" value="(SMA)" checked />
                                     <input class="sheet-LASp" type='checkbox' name='attr_linkedspellcastingattscore' style="display:none;" value="(SPI)" />
                                     <input class="sheet-LASt" type='checkbox' name='attr_linkedspellcastingattscore' style="display:none;" value="(STR)" />
@@ -5307,7 +5311,7 @@
                                     <span class="sheet-LASMA" name='attr_linkedspellcastingattscore' data-i18n="sma-u">(SMA)</span>
                                     <span class="sheet-LASPI" name='attr_linkedspellcastingattscore' data-i18n="spi-u">(SPI)</span>
                                     <span class="sheet-LASTR" name='attr_linkedspellcastingattscore' data-i18n="str-u">(STR)</span>
-                                    <span class="sheet-LAVIG" name='attr_linkedspellcastingattscore' data-i18n="vig-u">(VIG)</span>&nbsp;
+                                    <span class="sheet-LAVIG" name='attr_linkedspellcastingattscore' data-i18n="vig-u">(VIG)</span>&nbsp; -->
                                 </div>
                                 <span class="sheet-attrankselect"><select name="attr_spellcasting" title="@{Spellcasting}" class="sheet-traitdie" value="4">
                                     <option value="4">d4</option>
@@ -5690,8 +5694,9 @@
                             <div class='sheet-basetrait sheet-staticWeirdScience'>
                                 <input class='sheet-deltabutton' type='hidden' name='attr_weirdscience_delta' value='0' />
                                 <button class="sheet-traitbutton sheet-skillflexattbutton" type='roll' name='roll_tWeirdScienceRoll' title="@{tWeirdScienceRoll}" value='@{whisperweirdscience} &{template:roll} {{trait=@{weirdsciencename}}} @{rolltWeirdScience} @{linkedweirdscienceattscorebutton} @{showtraitmods}'> <span name="attr_weirdsciencename"></span></button>
-                                <div class='sheet-linkedAtt' style="display: inline-block; margin-left: -4px;">
-                                    <input class="sheet-LAA" type='checkbox' name='attr_linkedweirdscienceattscore' style="display:none;" value="(AGL)" />
+								<div class='sheet-linkedAtt' style="display: inline-block; margin-left: -4px;">
+									<span name="attr_linkedweirdscienceatt" data-i18n-dynamic></span>
+                                    <!-- <input class="sheet-LAA" type='checkbox' name='attr_linkedweirdscienceattscore' style="display:none;" value="(AGL)" />
                                     <input class="sheet-LASm" type='checkbox' name='attr_linkedweirdscienceattscore' style="display:none;" value="(SMA)" checked />
                                     <input class="sheet-LASp" type='checkbox' name='attr_linkedweirdscienceattscore' style="display:none;" value="(SPI)" />
                                     <input class="sheet-LASt" type='checkbox' name='attr_linkedweirdscienceattscore' style="display:none;" value="(STR)" />
@@ -5700,7 +5705,7 @@
                                     <span class="sheet-LASMA" name='attr_linkedweirdscienceattscore' data-i18n="sma-u">(SMA)</span>
                                     <span class="sheet-LASPI" name='attr_linkedweirdscienceattscore' data-i18n="spi-u">(SPI)</span>
                                     <span class="sheet-LASTR" name='attr_linkedweirdscienceattscore' data-i18n="str-u">(STR)</span>
-                                    <span class="sheet-LAVIG" name='attr_linkedweirdscienceattscore' data-i18n="vig-u">(VIG)</span>&nbsp;
+                                    <span class="sheet-LAVIG" name='attr_linkedweirdscienceattscore' data-i18n="vig-u">(VIG)</span>&nbsp; -->
                                 </div>
                                 <span class="sheet-attrankselect"><select name="attr_weirdscience" title="@{WeirdScience}" class="sheet-traitdie" value="4">
                                     <option value="4">d4</option>
@@ -5757,8 +5762,10 @@
                                         <input class='sheet-deltabutton' type='hidden' name='attr_skillnamerank_delta' value='0' />
                                         <button class="sheet-traitbutton sheet-smallskillflexattbutton" type='roll' name='roll_tSkillRoll' value='@{whisperskillname} &{template:roll} {{trait=@{SkillName}}} @{rolltSkill} @{linkedotherattscorebutton} @{showtraitmods}'></button>
                                         <input class="sheet-otherskill" type="text" name="attr_SkillName" placeholder="Skill" data-i18n-placeholder="skill" />
-                                        <div class='sheet-linkedAtt'>
-                                            <input class="sheet-LAA" type='checkbox' name='attr_linkedotherattscore' style="display:none;" value="(AGL)" />
+										
+										<div class='sheet-linkedAtt'>
+											<span name="attr_linkedotherattscore" data-i18n-dynamic></span>
+                                            <!-- <input class="sheet-LAA" type='checkbox' name='attr_linkedotherattscore' style="display:none;" value="(AGL)" />
                                             <input class="sheet-LASm" type='checkbox' name='attr_linkedotherattscore' style="display:none;" value="(SMA)" checked />
                                             <input class="sheet-LASp" type='checkbox' name='attr_linkedotherattscore' style="display:none;" value="(SPI)" />
                                             <input class="sheet-LASt" type='checkbox' name='attr_linkedotherattscore' style="display:none;" value="(STR)" />
@@ -5767,7 +5774,7 @@
                                             <span class="sheet-LASMA" name='attr_linkedotherattscore' data-i18n="sma-u"></span>
                                             <span class="sheet-LASPI" name='attr_linkedotherattscore' data-i18n="spi-u"></span>
                                             <span class="sheet-LASTR" name='attr_linkedotherattscore' data-i18n="str-u"></span>
-                                            <span class="sheet-LAVIG" name='attr_linkedotherattscore' data-i18n="vig-u"></span>
+                                            <span class="sheet-LAVIG" name='attr_linkedotherattscore' data-i18n="vig-u"></span> -->
                                         </div>
                                         <span class="sheet-attrankselect"><select name="attr_skillnamerank" title="@{repeating_skills_$#_SkillNameRank}" class="sheet-traitdie" value="4">
                                             <option value="4">d4</option>
@@ -5782,7 +5789,7 @@
                 						    <!--<label><input type="checkbox" name="attr_SkillEncumbrance" value="1" />
         						            <span class='sheet-ModDesc' data-i18n="apply-encumbrance">Apply Encumbrance</span></label><br />-->
                 						    <span class="sheet-ModDesc" data-i18n="linked-attribute">Linked Attribute</span>
-                						    <select class="sheet-LinkedAttSelect" name="attr_linkedotherattscore">
+                						    <select class="sheet-LinkedAttSelect" name="attr_linkedotherattscore"> <!-- Sets the attribute to be used above in the linkedAtt div-->
                 						        <option value="(AGL)" data-i18n="agility">Agility</option>
             									<option value="(SMA)" selected data-i18n="smarts">Smarts</option>
             									<option value="(SPI)" data-i18n="spirit">Spirit</option>
