Linked Attribute Formatting
Ensuring the dynamic translations display properly

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -4050,7 +4050,7 @@
                                 <input class='sheet-deltabutton' type='hidden' name='attr_athletics_delta' value='0' />
                                 <button class="sheet-traitbutton sheet-skillflexattbutton" type='roll' name='roll_tAthleticsRoll' title="@{tAthleticsRoll}" value='@{whisperathletics} &{template:roll} {{trait=@{athleticsname}}} @{rolltAthletics} @{linkedathleticsattbutton} @{showtraitmods}'> <span name="attr_athleticsname"></span></button>
 								<div class='sheet-linkedAtt' style="display: inline-block; margin-left: -4px;">
-									<span name="attr_linkedathleticsatt" data-i18n-dynamic></span>
+									<span class='sheet-linkedAttSpan' name="attr_linkedathleticsatt" data-i18n-dynamic></span>
                                     <!-- <input class="sheet-LAA" type='checkbox' name='attr_linkedathleticsatt' style="display:none;" value="(AGL)" />
                                     <input class="sheet-LASm" type='checkbox' name='attr_linkedathleticsatt' style="display:none;" value="(SMA)" checked />
                                     <input class="sheet-LASp" type='checkbox' name='attr_linkedathleticsatt' style="display:none;" value="(SPI)" /><input class="sheet-LASt" type='checkbox' name='attr_linkedathleticsatt' style="display:none;" value="(STR)" />
@@ -4978,7 +4978,7 @@
                                 <input class='sheet-deltabutton' type='hidden' name='attr_psionics_delta' value='0' />
                                 <button class="sheet-traitbutton sheet-skillflexattbutton" type='roll' name='roll_tPsionicsRoll' title="@{tPsionicsRoll}" value='@{whisperpsionics} &{template:roll} {{trait=@{psionicsname}}} @{rolltPsionics} @{linkedpsionicsattbutton} @{showtraitmods}'> <span name="attr_psionicsname"></span></button>
                                 <div class='sheet-linkedAtt' style="display: inline-block; margin-left: -4px;">
-									<span name="attr_linkedpsionicsatt" data-i18n-dynamic></span>
+									<span class='sheet-linkedAttSpan' name="attr_linkedpsionicsatt" data-i18n-dynamic></span>
 									<!-- <input class="sheet-LAA" type='checkbox' name='attr_linkedpsionicsatt' style="display:none;" value="(AGL)" />
                                     <input class="sheet-LASm" type='checkbox' name='attr_linkedpsionicsatt' style="display:none;" value="(SMA)" checked />
                                     <input class="sheet-LASp" type='checkbox' name='attr_linkedpsionicsatt' style="display:none;" value="(SPI)" /><input class="sheet-LASt" type='checkbox' name='attr_linkedpsionicsatt' style="display:none;" value="(STR)" />
@@ -5165,7 +5165,7 @@
                                 <input class='sheet-deltabutton' type='hidden' name='attr_ritual_delta' value='0' />
                                 <button class="sheet-traitbutton sheet-skillflexattbutton" type='roll' name='roll_tRitualRoll' title="@{tRitualRoll}" value='@{whisperritual} &{template:roll} {{trait=@{ritualname}}} @{rolltRitual} @{LinkedRitualAttbutton} @{showtraitmods}'> <span name="attr_ritualname"></span></button>
 								<div class='sheet-linkedAtt' style="display: inline-block; margin-left: -4px;">
-									<span name="attr_LinkedRitualAtt" data-i18n-dynamic></span>
+									<span class='sheet-linkedAttSpan' name="attr_LinkedRitualAtt" data-i18n-dynamic></span>
                                     <!-- <input class="sheet-LAA" type='checkbox' name='attr_LinkedRitualAtt' style="display:none;" value="(AGL)" />
                                     <input class="sheet-LASm" type='checkbox' name='attr_LinkedRitualAtt' style="display:none;" value="(SMA)" checked />
                                     <input class="sheet-LASp" type='checkbox' name='attr_LinkedRitualAtt' style="display:none;" value="(SPI)" />
@@ -5313,7 +5313,7 @@
                                 <input class='sheet-deltabutton' type='hidden' name='attr_spellcasting_delta' value='0' />
                                 <button class="sheet-traitbutton sheet-skillflexattbutton" type='roll' name='roll_tSpellcastingRoll' title="@{tSpellcastingRoll}" value='@{whisperspellcasting} &{template:roll} {{trait=@{spellcastingname}}} @{rolltSpellcasting} @{LinkedSpellcastingAttbutton} @{showtraitmods}'> <span name="attr_spellcastingname"></span></button>
 								<div class='sheet-linkedAtt' style="display: inline-block; margin-left: -4px;">
-									<span name="attr_linkedspellcastingatt" data-i18n-dynamic></span>
+									<span class='sheet-linkedAttSpan' name="attr_linkedspellcastingatt" data-i18n-dynamic></span>
                                     <!-- <input class="sheet-LAA" type='checkbox' name='attr_LinkedSpellcastingAtt' style="display:none;" value="(AGL)" />
                                     <input class="sheet-LASm" type='checkbox' name='attr_LinkedSpellcastingAtt' style="display:none;" value="(SMA)" checked />
                                     <input class="sheet-LASp" type='checkbox' name='attr_LinkedSpellcastingAtt' style="display:none;" value="(SPI)" />
@@ -5707,7 +5707,7 @@
                                 <input class='sheet-deltabutton' type='hidden' name='attr_weirdscience_delta' value='0' />
                                 <button class="sheet-traitbutton sheet-skillflexattbutton" type='roll' name='roll_tWeirdScienceRoll' title="@{tWeirdScienceRoll}" value='@{whisperweirdscience} &{template:roll} {{trait=@{weirdsciencename}}} @{rolltWeirdScience} @{linkedweirdscienceattbutton} @{showtraitmods}'> <span name="attr_weirdsciencename"></span></button>
 								<div class='sheet-linkedAtt' style="display: inline-block; margin-left: -4px;">
-									<span name="attr_linkedweirdscienceatt" data-i18n-dynamic></span>
+									<span class='sheet-linkedAttSpan' name="attr_linkedweirdscienceatt" data-i18n-dynamic></span>
                                     <!-- <input class="sheet-LAA" type='checkbox' name='attr_linkedweirdscienceatt' style="display:none;" value="(AGL)" />
                                     <input class="sheet-LASm" type='checkbox' name='attr_linkedweirdscienceatt' style="display:none;" value="(SMA)" checked />
                                     <input class="sheet-LASp" type='checkbox' name='attr_linkedweirdscienceatt' style="display:none;" value="(SPI)" />
@@ -5776,7 +5776,7 @@
                                         <input class="sheet-otherskill" type="text" name="attr_SkillName" placeholder="Skill" data-i18n-placeholder="skill" />
 										
 										<div class='sheet-linkedAtt'>
-											<span name="attr_linkedotherattscore" data-i18n-dynamic></span>
+											<span class='sheet-linkedAttSpan' name="attr_linkedotherattscore" data-i18n-dynamic></span>
                                             <!-- <input class="sheet-LAA" type='checkbox' name='attr_linkedotherattscore' style="display:none;" value="(AGL)" />
                                             <input class="sheet-LASm" type='checkbox' name='attr_linkedotherattscore' style="display:none;" value="(SMA)" checked />
                                             <input class="sheet-LASp" type='checkbox' name='attr_linkedotherattscore' style="display:none;" value="(SPI)" />
