--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -5631,19 +5631,19 @@ Falling Damage: If using hit locations, roll randomly for the hit location damag
 		            <h4>Demolition Damage Notes</h4>
 		            <textarea name="attr_demolition_damage_notes">Explosion damage. Targets struck directly takes listed damage. Apply "collateral damage" of Damage / (3 x distance from center of blast) rounded down.
 			    
-* Use torso armor to determine DR against explosion.<br />
-* If the explosion has an armor divisor, do NOT apply to "collateral damage.<br />
-* Explosions are considered incendiary. see Catching Fire B434<br />
-* Can use Dodge and Drop (B377) to avoid collateral damage.<br />
+* Use torso armor to determine DR against explosion.
+* If the explosion has an armor divisor, do NOT apply to "collateral damage.
+* Explosions are considered incendiary. see Catching Fire B434.
+* Can use Dodge and Drop (B377) to avoid collateral damage.
 * See B414</textarea>    
 		        </div><!-- end option-container -->
 		       
 		        <div class="option-container collision-falling-options">
 		            <h4>Fragmentation Skill Notes</h4>
-		            <textarea name="attr_fragmentation_skill_notes">For every three points by which the attack roll succeeds, one additional fragment strikes the target.<br />
-<br />
-The only active defense against fragments is to dive away from the explosion that produced them; see Dodge and Drop (p. 377).<br />
-<br />
+		            <textarea name="attr_fragmentation_skill_notes">For every three points by which the attack roll succeeds, one additional fragment strikes the target.
+
+The only active defense against fragments is to dive away from the explosion that produced them; see Dodge and Drop (p. 377).
+
 For each hit, roll hit location randomly. If that location is behind cover, the fragment hits cover.
 </textarea>    
 		        </div><!-- end option-container -->
