--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -494,7 +494,7 @@
 						<input type="number" name="attr_basic_speed_points" value="0" step="5" title="Macro name: basic_speed_points" />
 					</div>
 					<div class="sheet-cell sheet-col4">
-						<button title="Reminder: You must select your Token first.&#013;This will add the Token's Speed plus DX&#013;as a sinlge number in the Turn Order." class="sheet-roll-tracker" type="roll" value="@{speed_tracker} [[[[@{selected|Basic_Speed}]]+[[(@{selected|dexterity}/100)]] &{tracker:=}]] &{template:addToTracker} {{characterName=@{character_name}}} {{skillName=&#8195;Added to the Turn Order as [[ [[@{selected|Basic_Speed}]]+[[(@{selected|dexterity}/100)]] ]]}} {{basicSpeed=Speed: @{selected|Basic_Speed} &nbsp;&nbsp; DX: @{selected|dexterity}}}" name="roll_init" />
+						<button title="Reminder: You must select your Token first.&#013;This will add the Token's Speed plus DX&#013;as a single number in the Turn Order." class="sheet-roll-tracker" type="roll" value="@{speed_tracker} [[[[@{selected|Basic_Speed}]]+[[(@{selected|dexterity}/100)]] &{tracker:=}]] &{template:addToTracker} {{characterName=@{character_name}}} {{skillName=Added to the Turn Order as [[ [[@{selected|Basic_Speed}]]+[[(@{selected|dexterity}/100)]] ]]}} {{basicSpeed=Speed: @{selected|Basic_Speed} &nbsp;&nbsp; DX: @{selected|dexterity}}}" name="roll_init" />
 					</div>
 				</div> <!-- .sheet-row -->
 				<div class="sheet-row sheet-row-basic-move">
@@ -5315,6 +5315,8 @@
 	<ul>
 		<li>Skills Tab. New Revised Technique Table. Options to show/hide old technigue or new technique tables. If old technique table has no rows, then hide old table, show new table.</li>
 		<li>Bugfix: Check when Character Weight is updated on the Bio\Misc tab to also update the Grand Total on the Inventory tab.</li>
+		<li>Fix a spelling error.</li>
+		<li>Fix display bug with Add to Tracker Roll Template.</li>
 	</ul>
 	
 	<h4>Version 2.1.1</h4>
