--- a/GURPS/gurps.html
+++ b/GURPS/gurps.html
@@ -5317,6 +5317,7 @@
 		<li>Bugfix: Check when Character Weight is updated on the Bio\Misc tab to also update the Grand Total on the Inventory tab.</li>
 		<li>Fix a spelling error.</li>
 		<li>Fix display bug with Add to Tracker Roll Template.</li>
+		<li>Grimoire tab. Spells Table. Reduce the size of the Reason for MOD input line to try to prevent wrapping to next line.</li>
 	</ul>
 	
 	<h4>Version 2.1.1</h4>
