Renaming Academics (Derived stat) to Scholarship
In accordance with ETU SWADE, plus cleans up the duplicate naming.

--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -4003,7 +4003,7 @@
     							    </fieldset>
     							</div>
                             </div>
-							<!-- Academics -->
+							<!-- Academics Skill -->
                             <input class="sheet-StaticSkill" type="checkbox" name="attr_staticAcademics" style='display:none;'/>
                             <div class='sheet-basetrait sheet-staticAcademics'>
                                 <input class='sheet-deltabutton' type='hidden' name='attr_academicsskill_delta' value='0' />
@@ -6058,13 +6058,13 @@
     							<div class="sheet-derivecurrent"><input type="number" name="attr_ntoughnesscur" title="@{toughnesscur}" class="sheet-derivedStat" value="" readonly /></div>
     							<div class="sheet-derivemisc"><input type="number" name="attr_ntoughnessArmor" title="@{toughnessArmor}" class="sheet-derivedStat" value="0" /></div>
     					    </div>
-    					    <!-- Academics -->
-    					    <input class='sheet-useAcademics' type='checkbox' name='attr_useacademics' value='1' style='width: 15px; display: none;' />
-    					    <div class="sheet-basederived sheet-Academics">
-    					        <div class="sheet-derivelabel" data-i18n="academics-stat">Academics</div>
-    					        <div class="sheet-derivebase"><input type="number" name="attr_academics" class="sheet-derivedStat" title="@{academics}" value="0"/></div>
-    							<div class="sheet-derivemod"><input type="number" name="attr_academicsMod" class="sheet-derivedStat" title="@{academicsMod}" value="0"/></div>
-    							<div class="sheet-derivecurrent"><input type="number" name="attr_academicsCur" title="@{academicsCur}" class="sheet-derivedStat" readonly /></div>
+    					    <!-- Scholarship (formerly Academics) -->
+    					    <input class='sheet-useScholarship' type='checkbox' name='attr_usescholarship' value='1' style='width: 15px; display: none;' />
+    					    <div class="sheet-basederived sheet-Scholarship">
+    					        <div class="sheet-derivelabel" data-i18n="scholarship-stat">Scholarship</div>
+    					        <div class="sheet-derivebase"><input type="number" name="attr_scholarship" class="sheet-derivedStat" title="@{scholarship}" value="0"/></div>
+    							<div class="sheet-derivemod"><input type="number" name="attr_scholarshipMod" class="sheet-derivedStat" title="@{scholarshipMod}" value="0"/></div>
+    							<div class="sheet-derivecurrent"><input type="number" name="attr_scholarshipCur" title="@{scholarshipCur}" class="sheet-derivedStat" readonly /></div>
     							<div class="sheet-derivemisc">&nbsp;</div>
     					    </div>
     					    <!-- Sanity -->
@@ -8291,7 +8291,7 @@
     			    <input type="checkbox" class="sheet-hideDS" name="attr_hideDS" /><span class="sheet-showDS"></span>
     			    <h3 class='sheet-configSectionTitle' data-i18n="additional-derived-stats">Additional Derived Stats</h3>
     			    <div class="sheet-dsconfig">
-    			        <!--Academics--><label class="sheet-dsItem" data-i18n-title="academic-text"  title="Used to track a character's academic score. ETU uses this field."><input class='sheet-useAcademics' type='checkbox' name='attr_useacademics' value='1' style='width: 15px;' /><span data-i18n="academics-stat">Academics</span></label>
+    			        <!--Scholarship (formerly Academics)--><label class="sheet-dsItem" data-i18n-title="academic-text"  title="Used to track a character's academic score. ETU uses this field."><input class='sheet-useScholarship' type='checkbox' name='attr_usescholarship' value='1' style='width: 15px;' /><span data-i18n="scholarship-stat">Scholarship</span></label>
     			        <!--Corruption--><label class="sheet-dsItem" data-i18n-title="corruption-text" title="Used to track a character's corruption. Settings like Lankhmar use this field."><input type="checkbox" class="sheet-useCorruption" name="attr_Corruption" style="width: 15px;" /><span data-i18n="corruption">Corruption</span></label>
     			        <!--Fame--><label class="sheet-dsItem" data-i18n-title="fame-text" title="Used to track how famous a character is. Settings like Pirates of the Spanish Main use this field."><input type="checkbox" class="sheet-useFame" name="attr_potsmFame" style="width: 15px;" /><span data-i18n="fame">Fame</span></label>
     			        <!--Firewall--><label class="sheet-dsItem" data-i18n-title="firewall-text" title="Protects a character from being hacked. Starts at 4 and can be modified. This field is useful for settings like Interface Zero 2.0 or other Cyberpunk settings."><input type="checkbox" class="sheet-useFirewall" style="width: 15px;" name="attr_izFirewall" /><span data-i18n="firewall">Firewall</span></label>
