--- a/SavageWorlds-Tabbed/SWTRedesign.html
+++ b/SavageWorlds-Tabbed/SWTRedesign.html
@@ -778,6 +778,15 @@
 					academicsskillmod: academics_skillmod
 				})
 			});
+
+			getAttrs(['showFiMod', 'fiwilddie', 'fiwilddieinfo', 'fiModType'], function(v){
+				setattrs({
+					showFightingRollMod: v.showFiMod,
+					fightingwilddie: v.fiwilddie,
+					fightingwilddieinfo: v.fiwilddieinfo,
+					fightingModType: v.fiModType
+				});
+			});
 		}
 		else {
 			console.log("!!! Sheet Already Upgraded !!!");
@@ -3993,26 +4002,26 @@
     								<option value="12">d12</option>
     							</select>+</span>
     							<input class="sheet-traitmod" style="margin-left: 0px;" type="number" name="attr_fightingmod" title="@{FightingMod}" value="0" />
-                                <input class='sheet-moremods' type='checkbox' name='attr_showFiMod' /><span>y</span>
+                                <input class='sheet-moremods' type='checkbox' name='attr_showFightingRollMod' /><span>y</span>
         						<div class='sheet-basetrait sheet-traitmodplus'>
                                     <hr class="sheet-modsection">
                                     <input class='sheet-whispercheck' type='checkbox' value='/w gm' name='attr_whisperfighting' /> <span class='sheet-ModDesc' data-i18n="whisper-roll-to-gm">Whisper roll to GM</span><br />
-                                    <select name="attr_fiwilddie" title="@{fiwilddie}" class="sheet-traitdie">
+                                    <select name="attr_fightingwilddie" title="@{fightingwilddie}" class="sheet-traitdie">
                                         <option value="4">d4</option>
                                         <option value="6" selected>d6</option>
                                         <option value="8">d8</option>
                                         <option value="10">d10</option>
                                         <option value="12">d12</option>
                                     </select>
-                                    <input type='text' class='sheet-ModDesc' name='attr_fiwilddieinfo' placeholder='Standard Wild Die die type' data-i18n-placeholder="standard-wild-die-type" /><br />
+                                    <input type='text' class='sheet-ModDesc' name='attr_fightingwilddieinfo' placeholder='Standard Wild Die die type' data-i18n-placeholder="standard-wild-die-type" /><br />
                                     <hr class="sheet-modsection">
-        						    <input type='text' class='sheet-ModDesc' name='attr_fiModType' placeholder='Modifier due to edges, hindrances, etc' data-i18n-placeholder="att-mod-description" />
+        						    <input type='text' class='sheet-ModDesc' name='attr_fightingModType' placeholder='Modifier due to edges, hindrances, etc' data-i18n-placeholder="att-mod-description" />
         						    +<input class="sheet-otraitmod" type="number" name="attr_FightingskillMod" title="@{FightingskillMod}" value="0" /><br />
                                     <label class='sheet-delta' data-i18n='die-step-delta'>Increase/Decrease die type by number of steps</label><input class='sheet-otraitmod' style='border-bottom: 1px solid black;' type='number' name='attr_fighting_delta' title='@{fighting_delta}' value='0' /><input type='hidden' name='attr_fighting_base' /><input type='hidden' name='attr_fightingmod_base' />
         						</div>
         						<input type='hidden' name='attr_fighting_rank' value='1d4!' />
         						<input type='hidden' name='attr_fighting_display' value='1d4' />
-        						<input type='hidden' name='attr_rolltFighting' value='{{name=@{character_name} }} {{skill_rank=@{fighting_display} }} {{skill_roll=[[@{fighting_rank} + @{FightingskillMod}+ @{ModSumEnc}[Distracted, Wounds, Fatigue, Encumbrance] + @{traitmods} + @{smooth_dice}dF]]}} {{mook=[[1d0+@{wdNum} + @{smooth_dice}dF]]}} {{wild_die=[[ 1d@{fiwilddie}! + @{FightingMod} + @{FightingskillMod} + @{ModSumEnc}[Distracted, Wounds, Fatigue, Encumbrance] + @{traitmods} + @{smooth_dice}dF]]}}' />
+        						<input type='hidden' name='attr_rolltFighting' value='{{name=@{character_name} }} {{skill_rank=@{fighting_display} }} {{skill_roll=[[@{fighting_rank} + @{FightingskillMod}+ @{ModSumEnc}[Distracted, Wounds, Fatigue, Encumbrance] + @{traitmods} + @{smooth_dice}dF]]}} {{mook=[[1d0+@{wdNum} + @{smooth_dice}dF]]}} {{wild_die=[[ 1d@{fightingwilddie}! + @{FightingMod} + @{FightingskillMod} + @{ModSumEnc}[Distracted, Wounds, Fatigue, Encumbrance] + @{traitmods} + @{smooth_dice}dF]]}}' />
 								<input type="hidden" name="attr_fightingrollformula" value="@{fighting_rank} + @{FightingskillMod}+ @{ModSumEnc}[Distracted, Wounds, Fatigue, Encumbrance] + @{traitmods}" />
 								<input type="checkbox" class="sheet-useSkillSpec" name="attr_altRuleSkillSpec" style="display: none;" />
         						<div class='sheet-SkillSpec'>
